--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "kploejngmljnhpofmejijjhegehhdfoa",
-  "default_locale": "ja",
-  "name": "__MSG_extName__",
+  "default_locale": "en",
+  "name": "__MSG_ext_name__",
   "version": "0.5.9",
-  "description": "__MSG_extDescription__",
+  "description": "__MSG_ext_description__",
   "icons": {
     "256": "img/icon256.png",
     "128": "img/icon128.png",
