--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "default_locale": "en",
   "name": "__MSG_ext_name__",
   "manifest_version": 2,
-  "version": "0.6.4",
+  "version": "0.6.4.1",
   "description": "__MSG_ext_description__",
   "icons": {
     "256": "img/icon256.png",
@@ -11,7 +11,7 @@
     "32": "img/icon32.png",
     "16": "img/icon16.png"
   },
-  "optional_permissions": [
+  "permissions": [
     "contextMenus",
     "tabs",
     "background",
