--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
-  "default_locale": "en",
+  "default_locale": "ja",
   "name": "__MSG_ext_name__",
   "manifest_version": 2,
-  "version": "0.7.5",
+  "version": "0.7.6",
   "description": "__MSG_ext_description__",
   "icons": {
     "256": "img/icon256.png",
